--- a/src/components/calendar/calendar.astro
+++ b/src/components/calendar/calendar.astro
@@ -235,7 +235,7 @@ const calendarOptions = {
         popup.innerHTML = `<h3 class="event-title">${event.title}</h3>
     <p class="event-time">${timeString}</p>
     <div class="event-links">
-      <a href="${event.url}">Open Link</a>
+      <a href="${event.url}" target="_blank" rel="noopener noreferrer">Open Link</a>
       <a href="${downloadEvent(event)}" download="${
           event.title
       }.ics">Download Event</a>
