Flipbook scaling updates

--- a/src/components/flipbook/flipbook.astro
+++ b/src/components/flipbook/flipbook.astro
@@ -1,22 +1,22 @@
 ---
 import Section from "@layouts/Section.astro";
 import Icon from "@shared/icon.astro";
+import { getPDFThumbnail } from "@mws-astro/util";
 
 export interface Props {
   url?: string;
 }
 
 const {url} = Astro.props;
+
+
+// const filesize = Astro.pr
+
+
 ---
 <Section component="flipbook" {...Astro.props}>
     <div class="flipbook" data-flipbook={url}>
-        <div class="flipbook-page">
-            <canvas />
-            <div class="textLayer"></div>
-        </div>
-        <div class="flipbook-page">
-            <canvas />
-            <div class="textLayer"></div>
+        <div class="flipbook-viewport">
         </div>
         <div class="toolbar">
             <button data-action="<" title="Previous Page"><Icon name="carbon:chevron-left" height="1em"/></button>
@@ -33,6 +33,8 @@ import {getDocument, TextLayer, GlobalWorkerOptions} from "pdfjs-dist";
 import PDFJSWorker from "pdfjs-dist/build/pdf.worker.min?worker&url";
 GlobalWorkerOptions.workerSrc = PDFJSWorker;
 
+type ResizeableCanvas = HTMLCanvasElement & {_resize?: Function};
+
 document.addEventListener("DOMContentLoaded", setupFlipbook);
 document.addEventListener("astro:after-swap", setupFlipbook);
 
@@ -40,16 +42,83 @@ function setupFlipbook() {
   const flipbooks = document.querySelectorAll<HTMLElement>("[data-flipbook]");
  
   flipbooks.forEach(async (flipbook) => {
-    const canvases = Array.from(flipbook.getElementsByTagName("canvas"), 
-      (canvas) => ({
-          canvas, 
-          "context": canvas.getContext("2d"), 
-          "text": canvas.parentElement?.querySelector<HTMLDivElement>(".textLayer")
-      }));
+    const flipbookViewport = flipbook.querySelector<HTMLDivElement>(".flipbook-viewport");
     const toolbar = flipbook.querySelector(".toolbar");
     const pageCounter = toolbar?.querySelector('[data-action="page-number"]');
     
+    
+    const evenSpreads = true;
     let page = 0;
+    
+    if (!flipbookViewport) return;
+    const pdf = await getDocument(flipbook.dataset.flipbook).promise;
+    
+    updateCounter();
+    
+    // const observer = new MutationObserver((mut) => {});
+    // observer.observe(flipbookViewport, {attributes: false, childList: true, subtree: true});
+    
+  
+    
+    function updateCounter() {
+      if (!pageCounter) return;
+      
+      pageCounter.innerHTML = `${Math.max(Math.min(page + Number(!evenSpreads), pdf.numPages), 1)}/${pdf.numPages}`;
+    }
+    
+    async function addSpread(prepend?: boolean) {
+      const newSpread = document.createElement("div");
+      newSpread.classList.add("flipbook-spread");
+      (typeof prepend === "boolean") && newSpread.classList.add(prepend ? "previous" : "next");
+      
+      const newPage = document.createElement("div");
+      const newCanvas = document.createElement("canvas");
+      const newTextLayer = document.createElement("div");
+      newPage.classList.add("flipbook-page")
+      newTextLayer.classList.add("textLayer");
+      newPage.appendChild(newCanvas);
+      newPage.appendChild(newTextLayer);
+      newSpread.appendChild(newPage.cloneNode(true));
+      newSpread.appendChild(newPage);
+      
+      if (prepend) {
+        flipbookViewport?.prepend(newSpread);
+      } else {
+        flipbookViewport?.append(newSpread);
+      };
+      
+      return await renderSpread(newSpread);
+    }
+    
+    async function turnPage(backward: boolean = false) {
+      // const spreads = flipbookViewport.querySelectorAll<HTMLDivElement>(".flipbook-spread");
+      if (!flipbookViewport) return;
+      const spreads = Array.from(flipbookViewport.children);
+      
+      
+      let oldPage = page;
+      
+      if (backward) {
+        spreads.reverse()
+        page -= 2;
+      } else {
+        page += 2;
+      }
+      
+      if (page < 0 - Number(evenSpreads)) page = 0 - Number(evenSpreads);
+      if (page > pdf.numPages) page = oldPage;
+      
+      if (page === oldPage) return;
+      
+      const [before, current, after] = spreads;
+      
+      before.parentNode?.removeChild(before);
+      current.classList.add(backward ? "next" : "previous");
+      after.classList.remove("next", "previous");
+      
+      updateCounter();
+      await addSpread(backward);
+    }
     
     toolbar?.addEventListener("click", async (e) => {
       if (!e.target) return;
@@ -59,14 +128,16 @@ function setupFlipbook() {
       
       switch (button.dataset.action) {
         case "<":
-          page = page - canvases.length;
-          if (page < 0) page = 0;
-          await renderPage(page);
+          // page = page - 2;
+          // if (page < 0) page = 0;
+          // await renderPage(page);
+          turnPage(true);
           break;
         case ">":
-          page = page + canvases.length;
-          if (page >= pdf.numPages) page = 0;
-          await renderPage(page);
+          // page = page + 2;
+          // if (page >= pdf.numPages) page = 0;
+          // await renderPage(page);
+          turnPage();
           break;
         case "download":
           const a = document.createElement('a');
@@ -82,118 +153,188 @@ function setupFlipbook() {
       }
     })
     
-    const pdf = await getDocument(flipbook.dataset.flipbook).promise;
-    
-    async function renderPage(num: number) {
-       pageCounter && (pageCounter.innerHTML = `${num+1}/${pdf.numPages}`);
+    async function renderPage(canvas: ResizeableCanvas, num: number) {
+      const context = canvas.getContext("2d");
+      const text = canvas.parentElement?.querySelector<HTMLDivElement>(".textLayer");
       
-        canvases.forEach(async (canvas, offset) => {
-          num = num + offset;
-          if (num < 0 || num >= pdf.numPages) {
-            // canvas.context?.clearRect(0,0,canvas.canvas.height,canvas.canvas.width);
-            canvas.canvas.width = canvas.canvas.width;
-            canvas?.text && (canvas.text.innerHTML = "");
-            canvas.canvas.parentElement?.classList.toggle("blank-page", true);
-            
-            return;
-          }
-          
-          canvas.canvas.parentElement?.classList.toggle("blank-page", false);
-          const page = await pdf.getPage(num+1);
-          
-          var viewport = page.getViewport({scale: 1.5});
-          if (canvas.canvas.height != viewport.height)
-          canvas.canvas.height = viewport.height;
-          
-          if (canvas.canvas.width != viewport.width)
-          canvas.canvas.width = viewport.width;
-          
-          if (!canvas.context) throw Error("Canvas context missing");
-          
-          const renderTask = page.render({canvasContext: canvas.context, viewport}).promise;
-          const textContent = page.getTextContent().then(async (textContent) => {
-            if (!canvas.text) return;
-            
-            canvas.text.style.left = canvas.canvas.offsetLeft + 'px';
-            canvas.text.style.top = canvas.canvas.offsetTop + 'px';
-            canvas.text.style.height = canvas.canvas.offsetHeight + 'px';
-            canvas.text.style.width = canvas.canvas.offsetWidth + 'px';
-            
-            const textLayer = new TextLayer({
-              textContentSource: textContent,
-              container: canvas.text,
-              viewport: viewport,
-            });
-            
-            function setScaleFactor() {
-              const scaleFactor = canvas.canvas.clientWidth / (canvas.canvas.width / viewport.scale);
-              canvas.text?.parentElement?.setAttribute("style", `--scale-factor: ${scaleFactor}`);
-            }
-            
-            setScaleFactor()
-            
-            canvas.text.innerHTML = "";
-            await textLayer.render();
-          });
-          
-          return await Promise.all([renderTask, textContent]);
+      if (num < 0 || num >= pdf.numPages) {
+        // canvas.width = canvas.width;
+        // text && (text.innerHTML = "");
+        canvas.parentElement?.classList.toggle("blank-page", true);
+        
+        return;
+      }
+      
+      const page = await pdf.getPage(num+1);
+      var viewport = page.getViewport({scale: 1.5});
+      
+      if (canvas.height != viewport.height)
+      canvas.height = viewport.height;
+      
+      if (canvas.width != viewport.width)
+      canvas.width = viewport.width;
+      
+      if (!context) throw Error("Canvas context missing");
+      
+      const renderTask = page.render({canvasContext: context, viewport}).promise;
+      const textContent = page.getTextContent().then(async (textContent) => {
+        if (!text) return;
+        
+        text.style.left = canvas.offsetLeft + 'px';
+        text.style.top = canvas.offsetTop + 'px';
+        text.style.height = canvas.offsetHeight + 'px';
+        text.style.width = canvas.offsetWidth + 'px';
+        
+        const textLayer = new TextLayer({
+          textContentSource: textContent,
+          container: text,
+          viewport: viewport,
         });
+        
+        canvas._resize = () => {
+          const widthScaleFactor = canvas.clientWidth / (canvas.width / viewport.scale);
+          const heightScaleFactor = canvas.clientHeight / (canvas.height / viewport.scale);
+          const scaleFactor = Math.min(widthScaleFactor, heightScaleFactor); // account for object-fit contain
+          
+          text?.parentElement?.setAttribute("style", `--scale-factor: ${scaleFactor}`);
+        }
+        
+        canvas._resize();
+        
+        const observer = new ResizeObserver((entries) => {
+          entries.forEach((entry: any) => entry.target._resize && entry.target._resize());
+        });
+        
+        observer.observe(canvas);
+        
+        text.innerHTML = "";
+        await textLayer.render();
+        
+        text.style.left = "";
+      });
+      
+      return await Promise.all([renderTask, textContent]);
     }
     
-    await renderPage(0);
+    async function renderSpread(spread: HTMLDivElement) {
+      const canvases = Array.from(spread.querySelectorAll("canvas"));
+      var spreadOffset = 0;
+      
+      if (spread.classList.contains("next")) {
+        spreadOffset += 2;
+      } else if (spread.classList.contains("previous")) {
+        spreadOffset += -2;
+      }
+      
+      return Promise.all(canvases.map(async (canvas, i) => {
+        let p = page + i + spreadOffset - Number(evenSpreads);
+        console.log(`Render page ${p} to`, canvas);
+        return renderPage(canvas, p);
+      }));
+    }
+    
+    addSpread(true);
+    addSpread();
+    addSpread(false);
   });
 }
 </script>
 
-<style lang="scss">
+<style lang="scss" is:global>
     div.flipbook {
         position: relative;
-        display: grid;
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-        grid-template-rows: 1fr;
-        perspective: 1000px;
-        /* perspective-origin: center right; */
         
-        canvas {
-            width: 100%;
-            object-fit: contain;
+        .flipbook-viewport {
+            display: grid;
+            grid-template-areas: "flipbook";
+            
+            grid-template-rows: minmax(0, 1fr);
+            perspective: 10000px;
+        }
+        
+        .flipbook-spread {
+            /* position: relative; */
+            grid-area: flipbook;
+            display: grid;
+            grid-template-columns: repeat(2, minmax(0, 1fr));
+            grid-template-rows: 1fr;
+            
+            
+            &.previous {
+                .flipbook-page:nth-child(2) {
+                    transform: rotateY(-180deg);
+                }
+            }
+            & {
+                z-index: auto;
+                
+                .flipbook-page {
+                    z-index: 1;
+                    transform: rotateY(0deg);
+                }
+            }
+            &.next {
+                .flipbook-page:nth-child(2) {
+                    z-index: -1;
+                }
+                .flipbook-page:nth-child(1) {
+                    transform: rotateY(180deg);
+                }
+            }
         }
         
         .flipbook-page {
             position: relative;
+            transition: transform 0.2s ease-in-out, z-index 0.2s;
+            backface-visibility: hidden;
             
-            .text-layer {
+            canvas {
+                width: 100%;
+                object-fit: contain;
+                max-height: 90vh;
+            }
+            
+            &:nth-child(1) {
+                transform-origin: right;
+                
+                canvas {
+                    object-position: right;
+                }
+                
+                .textLayer {
+                    right: 0;
+                    left: unset;
+                }
+                
+                &::after {
+                    background: linear-gradient(to right, transparent 80%, 95%, rgb(0, 0, 0, 0.4));
+                }
+            }
+            &:nth-child(2) {
+                transform-origin: left;
+                
+                canvas {
+                    object-position: left;
+                }
+                
+                .textLayer {
+                    left: 0;
+                }
+                
+                &::after {
+                    background: linear-gradient(to left, transparent 80%, 95%, rgb(0, 0, 0, 0.4));
+                }
+            }
+            
+            &::after {
+                content: "";
                 position: absolute;
                 inset: 0;
-
+                pointer-events: none;
             }
-        }
-        
-        .flipbook-page::after {
-            content: "";
-            position: absolute;
-            inset: 0;
-            pointer-events: none;
-        }
-        
-        .flipbook-page.blank-page::after {
-            content: none;
-        }
-        
-        .flipbook-page:first-of-type {
-            transform-origin: right;
-            transform: rotateY(5deg);
             
-            &::after {
-                background: linear-gradient(to right, transparent 80%, 95%, rgb(0, 0, 0, 0.4));
-            }
-        }
-        .flipbook-page:nth-child(2) {
-            transform-origin: left;
-            transform: rotateY(-5deg);
-            
-            &::after {
-                background: linear-gradient(to left, transparent 80%, 95%, rgb(0, 0, 0, 0.4));
+            &.blank-page::after {
+                content: none;
             }
         }
     }
@@ -203,22 +344,26 @@ function setupFlipbook() {
         bottom: 0;
         left: 50%;
         
-        transform: translateX(-50%);
-        background-color: white;
+        transform: translateX(-50%) translateY(110%);
+        /* background-color: white; */
+        
+        z-index: 999;
         
         button {
             color: #333;
             border-color: #333;
             padding: .3em .8em;
+            background-color: #fff;
+            
+            border-radius: var(--border-radius);
         }
     }
-</style>
 
-<style lang="scss" is:global>
     .hiddenCanvasElement {
         display: none;
     }
     
+    /* PDF.js styles */
     .flipbook-page {
         .textLayer {
           position: absolute;
