--- a/src/shared/astro/SiteNavigation.astro
+++ b/src/shared/astro/SiteNavigation.astro
@@ -137,7 +137,7 @@ const secondary: any = (preferences as any).header?.secondary_navigation || [];
                                                 <div class="dropdown-indicator">
                                                     <Icon
                                                         name="fa6-solid:caret-down"
-                                                        height="2rem"
+                                                        height="1.2em"
                                                     />
                                                 </div>
                                             )}
