--- a/src/components/file/file.astro
+++ b/src/components/file/file.astro
@@ -5,7 +5,8 @@ import Markdown from "@shared/Markdown.astro";
 // import { PDFiumLibrary } from "@hyzyla/pdfium";
 import Image from "@shared/Image.astro";
 import Icon from "@shared/icon.astro";
-import type { PDFiumRenderOptions } from "@hyzyla/pdfium/dist/types.js";
+// import type { PDFiumRenderOptions } from "@hyzyla/pdfium/dist/types.js";
+import { getPDFThumbnail, getFilesize, formatBytes, resolvePath } from "@mws-astro/util";
 
 export interface Props {
     files?: [
@@ -25,20 +26,6 @@ export interface Props {
 
 const { files, show_filetype, show_icon, show_filesize, show_thumbnail } =
     Astro.props;
-
-// let fs: any | undefined;
-
-function formatBytes(bytes: number, decimals = 2) {
-    if (bytes === 0) return "0 Bytes";
-
-    const k = 1024;
-    const dm = decimals < 0 ? 0 : decimals;
-    const sizes = ["Bytes", "KB", "MB", "GB", "TB"];
-
-    const i = Math.floor(Math.log(bytes) / Math.log(k));
-
-    return parseFloat((bytes / Math.pow(k, i)).toFixed(dm)) + " " + sizes[i];
-}
 
 function getFileType(path: string) {
     return path.match(/.*\.(.*?)$/)?.[1].toLowerCase();
@@ -106,45 +93,13 @@ if (!ENV_BOOKSHOP_LIVE && files?.length) {
         return undefined;
     });
     const path = await import("node:path");
-    const { PDFiumLibrary } = await import("@hyzyla/pdfium");
-    const sharp = (await import("sharp")).default;
-    // const pdf = await import("@hyzyla/pdfium").then(async (p: any) => {
-    //     return await p.init();
-    // }, () => {
-    //     return undefined;
-    // });
-    
-    
-    async function renderFunction(options: PDFiumRenderOptions) {
-      return await sharp(options.data, {
-        raw: {
-          width: options.width,
-          height: options.height,
-          channels: 4,
-        },
-      })
-        .png()
-        .toBuffer();
-    }
-
-
-    const pdf = await PDFiumLibrary.init();
 
     if (fs) {
         await Promise.all(
             files.map(async (file) => {
                 let realPath = file.path;
-
-                file.size = await fs
-                    .stat(realPath)
-                    .catch(() => {
-                        realPath = path.join("public", realPath);
-                        return fs.stat(realPath);
-                    })
-                    .then(
-                        (stats) => stats.size,
-                        () => undefined,
-                    );
+                
+                file.size = await getFilesize(file.path);
 
                 if (show_thumbnail) {
                     switch (getFileType(realPath)) {
@@ -155,24 +110,10 @@ if (!ENV_BOOKSHOP_LIVE && files?.length) {
                         case "webp":
                         case "avif":
                         case "tiff":
-                            file.thumbnail = realPath;
+                            file.thumbnail = await resolvePath(file.path);
                             break;
                         case "pdf":
-                            file.thumbnail = await fs
-                                .readFile(realPath)
-                                .then((buffer) => pdf.loadDocument(buffer))
-                                .then((document) =>
-                                    document
-                                        .getPage(0)
-                                        .render({ scale: 1, render: renderFunction }),
-                                )
-                                .then((thumbnail) => {
-                                    let thumbPath = `${realPath}.png`;
-                                    fs.writeFile(thumbPath, thumbnail.data, {
-                                        flag: "w",
-                                    }).catch(() => {});
-                                    return thumbPath;
-                                });
+                            file.thumbnail = await getPDFThumbnail(file.path);
                             break;
                         default:
                     }
@@ -259,7 +200,7 @@ if (!ENV_BOOKSHOP_LIVE && files?.length) {
         position: relative;
         margin: 0;
         border: 2px solid rgb(var(--color-primary));
-        background-color: #eee;
+        background-color: #eee5;
         transform: scale(1);
         transition: transform 0.2s ease;
 
